--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -970,7 +970,7 @@
                                         <div class="textimagecarousel parbase oil aem-GridColumn--default--none aem-GridColumn aem-GridColumn--default--10 aem-GridColumn--offset--default--1">
                                         
                                         
-                                    
+                                            <div class="richtext-theme"><h1>Our mission goals</h1></div>
                                         <section class="event-carousel-wrapper">
                                             <div class="card-img-container">
                                                 <div class="row">
@@ -1382,10 +1382,17 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="blog-content">
+                            <h6 class="footer-title">Our Office</h6>
+                            <p class="aadivas-text-p4 ">AADIVAS FOODS PRIVATE LIMITED <br>
+                                C/O Madhura Ekka, S/o Benedik Ekka, Karamdipa, GUMLA <br>
+                                RANCHI, Jharkhand. 835207 <br>
+                                Phone: +917736875505</p>
+                        </div>
                     </div>
                     <div class="copyright aadivas-text-p5">
                         <div>
-                            <p class="copyright-content">© 2021 Aadivas Foods All Rights Reserved.</p>
+                            <p class="copyright-content">© 2021 Aadivas Foods Private Limited. All Rights Reserved.</p>
                         </div>
                     </div>
                 </div>
