--- a/templates/home.html
+++ b/templates/home.html
@@ -872,7 +872,7 @@
                                                                     <div class="clearfix ">
                                                                         <div class="richtext-theme">
                                                                             <h4>Sourcing and Shipping Culture-Quality products Worldwide</h4>
-                                                                            <p>Sourced from the best ecological locations of India and with high gluten strength, we help our customers meet increasing consumer demands for sustainable sourcing and healthy foods.</p>
+                                                                            <p>Sourced from the best ecological locations of India and with high quality standards, we help our customers meet increasing consumer demands for sustainable sourcing and healthy foods.</p>
                                                                             <p> </p>
                                                                         </div>
                                                                     </div>
@@ -1013,6 +1013,7 @@
                             </div>  
                         </div>
                     </div>
+                    <div class="padding0"></div>
                     <div class="backgroundcontainer container responsivegrid aem-GridColumn aem-GridColumn--default--12">
                         <div class="secondary-background g-pt-15 g-pb-15">
                             <div id="backgroundcontainer-9307e09f07" class="cmp-container">
@@ -1194,154 +1195,13 @@
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <div class="padding1"></div>
                                                 <div class="row">
                                                     <div class="clearfix">
                                                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                                                             <div class="aem-Grid aem-Grid--12 aem-Grid--default--12 ">
                                                                 <div class="imagetext parbase aem-GridColumn aem-GridColumn--default--12">
-                                                                    <style>
-                                                            /* Image pop out css START */
-                                                            /*+ icon issue*/
-                                                            @media (min-width:769px) {
-                                                                button.btnpopoutimg.popoutcaption {
-                                                                margin: 30% auto !important;
-                                                            }
-                                                            }
-                                                            /*+ icon issue*/
-                                                            .btnpopoutimg {
-                                                            position: absolute;
-                                                            top: 10%;
-                                                            left: 94%;
-                                                            transform: translate(-50%, -50%);
-                                                            -ms-transform: translate(-50%, -50%);
-                                                            background-color: #eadddd0d;
-                                                            color: var(--primary-color);
-                                                            /* font-size: 40px; */
-                                                            padding: 12px 24px;
-                                                            border: none;
-                                                            cursor: pointer;
-                                                            border-radius: 5px;
-                                                            text-align: center;
-                                                            }
-                                                            
-                                                            .btnpopoutimg:hover {
-                                                            background-color: #eadddd0d;
-                                                            color: var(--secondary-color);
-                                                            }
-                                                                #myImg {
-                                                            border-radius: 5px;
-                                                            cursor: pointer;
-                                                            transition: 0.3s;
-                                                            }
-                                                            
-                                                            #myImg:hover {opacity: 1.7;}
-                                                            
-                                                            /* The Modal (background) */
-                                                            .modal-image-popup {
-                                                            display: none; /* Hidden by default */
-                                                            position: fixed; /* Stay in place */
-                                                            z-index: 1; /* Sit on top */
-                                                            padding-top: 100px; /* Location of the box */
-                                                            left: 0;
-                                                            top: 0;
-                                                            width: 100%; /* Full width */
-                                                            height: 100%; /* Full height */
-                                                            overflow: auto; /* Enable scroll if needed */
-                                                            background-color: rgb(0,0,0); /* Fallback color */
-                                                            background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
-                                                            }
-                                                            
-                                                            /* Modal Content (image) */
-                                                            .modal-content {
-                                                            margin: auto;
-                                                            display: block;
-                                                            width: 100%;
-                                                            max-width: 100%;
-                                                            }
-                                                            
-                                                            /* Caption of Modal Image */
-                                                            #caption {
-                                                            margin: auto;
-                                                            display: block;
-                                                            width: 80%;
-                                                            max-width: 700px;
-                                                            text-align: center;
-                                                            color: #ccc;
-                                                            padding: 10px 0;
-                                                            height: 150px;
-                                                            }
-                                                            
-                                                            /* Add Animation */
-                                                            .modal-content, #caption {  
-                                                            -webkit-animation-name: zoom;
-                                                            -webkit-animation-duration: 0.6s;
-                                                            animation-name: zoom;
-                                                            animation-duration: 0.6s;
-                                                            }
-                                                            
-                                                            @-webkit-keyframes zoom {
-                                                            from {-webkit-transform:scale(0)} 
-                                                            to {-webkit-transform:scale(1)}
-                                                            }
-                                                            
-                                                            @keyframes zoom {
-                                                            from {transform:scale(0)} 
-                                                            to {transform:scale(1)}
-                                                            }
-                                                            
-                                                            /* The Close Button */
-                                                            .close {
-                                                            position: absolute;
-                                                            top: 15px;
-                                                            right: 35px;
-                                                                color: #fff; 
-                                                                opacity: 1;
-                                                            font-size: 40px;
-                                                            font-weight: bold;
-                                                            transition: 0.3s;
-                                                            
-                                                            }
-                                                            
-                                                            .close:hover,
-                                                            .close:focus {
-                                                            color: white;
-                                                            text-decoration: none;
-                                                            cursor: pointer;
-                                                            }
-                                                            
-                                                            .popout:hover {
-                                                            opacity:1.0 !important;
-                                                            
-                                                            //box-shadow: 0 0 0 !important;
-                                                            }
-                                                            
-                                                            /* 100% Image Width on Smaller Screens */
-                                                            @media only screen and (max-width: 700px){
-                                                            .modal-content {
-                                                                width: 100%;
-                                                            }
-                                                            }
-                                                            
-                                                            @media (max-width:767px) {
-                                                            .btnpopoutimg {
-                                                                    /*top: 6.9%;*/
-                                                                    /* font-size: 35px; */
-                                                                    position: relative;
-                                                                    bottom: 122px;
-                                                                            }
-                                                            
-                                                                    } 
-                                                                        @media only screen and (max-device-width: 767px) and (orientation: landscape) {
-                                                                            .btnpopoutimg {
-                                                                        /* top: 3.5%;
-                                                                            left: 96%; */
-                                                                    position: relative;
-                                                                        bottom: 225px;
-                                                            }
-                                                            }
-                                                            
-                                                            /* Image pop out css END */            
-                                                                    </style>
+                                                                    
                                                                     <div class="clearfix big-caption-wrapper ">
                                                                         <div>
                                                                             <img src="../static/media/store.jpg" class="big-caption-image " style="cursor: default;" id="myImg"/>
@@ -1355,13 +1215,13 @@
                                                                 <div class="richtext parbase aem-GridColumn aem-GridColumn--default--12">
                                                                     <div class="clearfix ">
                                                                         <div class="richtext-theme">
-                                                                            <h5><span style="font-weight: normal;">From our farms to your stores:</span></h5>
+                                                                            <h5><span style="font-weight: normal;">From our farms to your stores</span></h5>
                                                                             <p>We provide all sorts of packaging and labelling solutions according to your requirements.</p>
                                                                         </div>
                                                                     </div>
                                                                 </div>
                                                                 <div class="buttoncomponent parbase oil aem-GridColumn aem-GridColumn--default--12">
-                                                                    <a href="products.html" class="primary-button" target="_self">Know More
+                                                                    <a href="contact_us.php" class="primary-button" target="_self">Send Enquiry
                                                                     </a>
                                                                 </div>
                                                             </div>
@@ -1401,10 +1261,17 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="blog-content">
+                            <h6 class="footer-title">Our Office</h6>
+                            <p class="aadivas-text-p4 ">AADIVAS FOODS PRIVATE LIMITED <br>
+                                C/O Madhura Ekka, S/o Benedik Ekka, Karamdipa, GUMLA <br>
+                                RANCHI, Jharkhand. 835207 <br>
+                                Phone: +917736875505</p>
+                        </div>
                     </div>
                     <div class="copyright aadivas-text-p5">
                         <div>
-                            <p class="copyright-content">© 2021 Aadivas Foods All Rights Reserved.</p>
+                            <p class="copyright-content">© 2021 Aadivas Foods Private Limited. All Rights Reserved.</p>
                         </div>
                     </div>
                 </div>
