--- a/templates/products.html
+++ b/templates/products.html
@@ -891,7 +891,7 @@
                         
                         <div class="clearfix ">
                             <div class="richtext-theme">
-                                <h5 id="cerealgrains"><span style="background-color: transparent;font-weight: normal;">Cereal Grains</span><br />
+                                <h5 id="cerealgrains"><span style="background-color: transparent;font-weight: normal;">Cereal Grains</span> <a style="padding-left: 20px; font-size:15px; font-weight: normal;" href="contact_us.php">Send Enquiry</a> <br />
                         </h5>
                         </div>
                         </div>
@@ -1057,7 +1057,7 @@
                         
                         <div class="clearfix ">
                             <div class="richtext-theme">
-                                <h5 id="vegetables"><span style="font-weight: normal;">Vegetables</span></h5>
+                                <h5 id="vegetables"><span style="font-weight: normal;">Vegetables</span><a style="padding-left: 20px; font-size:15px; font-weight: normal;" href="contact_us.php">Send Enquiry</a></h5>
                         </div>
                         </div>
                         
@@ -1184,7 +1184,7 @@
                         
                         <div class="clearfix ">
                             <div class="richtext-theme">
-                                <h5 id="fruits"><span style="font-weight: normal;">Fruits </span></h5>
+                                <h5 id="fruits"><span style="font-weight: normal;">Fruits </span><a style="padding-left: 20px; font-size:15px; font-weight: normal;" href="contact_us.php">Send Enquiry</a></h5>
                         </div>
                         </div>
                         
@@ -1249,7 +1249,7 @@
                         
                         <div class="clearfix ">
                             <div class="richtext-theme">
-                                <h5 id="nuts"><span style="font-weight: normal;">Nuts</span></h5>
+                                <h5 id="nuts"><span style="font-weight: normal;">Nuts</span><a style="padding-left: 20px; font-size:15px; font-weight: normal;" href="contact_us.php">Send Enquiry</a></h5>
                         </div>
                         </div>
                         
@@ -1316,10 +1316,17 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="blog-content">
+                            <h6 class="footer-title">Our Office</h6>
+                            <p class="aadivas-text-p4 ">AADIVAS FOODS PRIVATE LIMITED <br>
+                                C/O Madhura Ekka, S/o Benedik Ekka, Karamdipa, GUMLA <br>
+                                RANCHI, Jharkhand. 835207 <br>
+                                Phone: +917736875505</p>
+                        </div>
                     </div>
                     <div class="copyright aadivas-text-p5">
                         <div>
-                            <p class="copyright-content">© 2021 Aadivas Foods All Rights Reserved.</p>
+                            <p class="copyright-content">© 2021 Aadivas Foods Private Limited. All Rights Reserved.</p>
                         </div>
                     </div>
                 </div>
