--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1153,7 +1153,7 @@
                                                     <h6 class="g-mb-10">Growth </h6>
                                                 
                                                 
-                                                    <p class="grey-text aadivas-text-p4 hidden-xs hidden-sm g-mb-10">We accept that there is no one way to grow a business so we emphasize within our teams on multi-dimensional growth including expanding our service area, forming business partnerships to help our clients grow as well, launching new products in existing markets, diversifying your existing product line. This not only drives business performance but also spurs innovation allowing us to introduce greater sustainability or resilience in the market and lowering costs due to economies of scale. <br></p>
+                                                    <p class="grey-text aadivas-text-p4  g-mb-10 cardp0">We accept that there is no one way to grow a business so we emphasize within our teams on multi-dimensional growth including expanding our service area, forming business partnerships to help our clients grow as well, launching new products in existing markets, diversifying your existing product line. This not only drives business performance but also spurs innovation allowing us to introduce greater sustainability or resilience in the market and lowering costs due to economies of scale. <br></p>
                                                 
                                             </div>
                                         </div>
@@ -1177,7 +1177,7 @@
                                                     <h6 class="g-mb-10">Innovation</h6>
                                                 
                                                 
-                                                    <p class="grey-text aadivas-text-p4 hidden-xs hidden-sm g-mb-10">We appreciate, recognise, reward and incorporate innovations brought forward by any stakeholder in the process of farm to table.</p>
+                                                    <p class="grey-text aadivas-text-p4  g-mb-10 cardp">We appreciate, recognise, reward and incorporate innovations brought forward by any stakeholder in the process of farm to table.</p>
                                                 
                                             </div>
                                         </div>
@@ -1201,7 +1201,7 @@
                                                     <h6 class="g-mb-10">Entrepreneurship </h6>
                                                 
                                                 
-                                                    <p class="grey-text aadivas-text-p4 hidden-xs hidden-sm g-mb-10">We are an ambitious group and evangelise entrepreneurship thus attracting new talents and partnerships.</p>
+                                                    <p class="grey-text aadivas-text-p4  g-mb-10 cardp">We are an ambitious group and evangelise entrepreneurship thus attracting new talents and partnerships.</p>
                                                 
                                             </div>
                                         </div>
@@ -1243,7 +1243,7 @@
                                                     <h6 class="g-mb-10">Leadership </h6>
                                                 
                                                 
-                                                    <p class="grey-text aadivas-text-p4 hidden-xs hidden-sm g-mb-10">With multi-industrial expertise and technology we drive our teams and partner relationships to deliver the best value to our customers via our vision and mission. With this vision and mission, our organisation is able to achieve more in just about every aspect of its operation. We are able to unlock our abilities to thrive with change, organisational growth potential and effective resource management. We believe our greatest asset is our people and thus with the right leadership in agriculture & export we are able to invest better in our customers, farmers and employees . </p>
+                                                    <p class="grey-text aadivas-text-p4  g-mb-10 cardp0">With multi-industrial expertise and technology we drive our teams and partner relationships to deliver the best value to our customers via our vision and mission. With this vision and mission, our organisation is able to achieve more in just about every aspect of its operation. We are able to unlock our abilities to thrive with change, organisational growth potential and effective resource management. We believe our greatest asset is our people and thus with the right leadership in agriculture & export we are able to invest better in our customers, farmers and employees . </p>
                                                 
                                             </div>
                                         </div>
@@ -1267,7 +1267,7 @@
                                                     <h6 class="g-mb-10">Integrity </h6>
                                                 
                                                 
-                                                    <p class="grey-text aadivas-text-p4 hidden-xs hidden-sm g-mb-10">We deliver what we commit and its reflected in our relationships with our customers suppliers and each other at Aadivas.</p>
+                                                    <p class="grey-text aadivas-text-p4  g-mb-10 cardp">We deliver what we commit and its reflected in our relationships with our customers suppliers and each other at Aadivas.</p>
                                                 
                                             </div>
                                         </div>
@@ -1291,7 +1291,7 @@
                                                     <h6 class="g-mb-10">Making a difference </h6>
                                                 
                                                 
-                                                    <p class="grey-text aadivas-text-p4 hidden-xs hidden-sm g-mb-10">We go above and beyond whenever possible to make life easier for our customers, farmers and their communities.</p>
+                                                    <p class="grey-text aadivas-text-p4  g-mb-10 cardp">We go above and beyond whenever possible to make life easier for our customers, farmers and their communities.</p>
                                                 
                                             </div>
                                         </div>
